add form capability

--- a/app/templates/public/about.html
+++ b/app/templates/public/about.html
@@ -9,6 +9,9 @@
             <div class="h1">
                 About 
             </div>
+            <p>
+                Check out my <a href="https://www.linkedin.com/in/rahmatashari/">LinkedIn</a> page. Not so much to flex in there but it is something hehe
+            </p>
         </div>
     </div>
 </div>
