--- a/app/templates/public/index.html
+++ b/app/templates/public/index.html
@@ -14,6 +14,8 @@
                 Rahmat is learning Flask microframework lol!
             </p>
 
+            <img src="static/img/pepe.png" alt="Lives imitate memes">
+
         </div>
     </div>
 </div>
