add dynamic url

--- a/app/templates/public/templates/public_template.html
+++ b/app/templates/public/templates/public_template.html
@@ -36,13 +36,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/jinja">Jinja</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="sign-up"> log-in </a> 
+                    </li>
                 </ul>
             </div>
+
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/admin/dashboard"> Admin page</a> 
+                        <a class="nav-link active" aria-current="page" href="admin/dashboard"> admin </a> 
                     </li>
                 </ul>
             </div>
